[package]
name = "u32-engine"
version = "0.1.0"
authors = ["Iquiji <yt.failerbot.3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# opt-level = 3
# lto = true
# debug = false
# codegen-units = 1
# panic = "abort"

[dependencies]
rand = "0"
minifb = "0.19"
image = "0.23.2"
serde = "1"
serde_json = "1"
